完善文件信息

--- a/pudding-gateway/pom.xml
+++ b/pudding-gateway/pom.xml
@@ -20,14 +20,16 @@
       <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
 
-    <!-- Nacos: discovery + config -->
+    <!-- Consul 服务发现 -->
     <dependency>
-      <groupId>com.alibaba.cloud</groupId>
-      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-consul-discovery</artifactId>
     </dependency>
+
+    <!-- Consul 配置中心 -->
     <dependency>
-      <groupId>com.alibaba.cloud</groupId>
-      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-consul-config</artifactId>
     </dependency>
 
     <dependency>
