--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,21 @@
 version: "3.8"
 services:
-  nacos:
-    image: nacos/nacos-server:v2.3.2
-    container_name: nacos
-    environment:
-      - MODE=standalone
+  consul:
+    image: consul:1.15.3
+    container_name: consul
+    command: agent -server -bootstrap-expect=1 -data-dir=/consul/data -config-dir=/consul/config -ui -bind=0.0.0.0 -client=0.0.0.0
     ports:
-      - "8848:8848"
+      - "8500:8500"
     volumes:
-      - nacos-data:/home/nacos/data
-      - nacos-logs:/home/nacos/logs
+      - consul-data:/consul/data
+      - consul-config:/consul/config
+    environment:
+      - CONSUL_BIND_INTERFACE=eth0
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8500/v1/status/leader"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   pudding-user:
     build:
@@ -19,9 +25,16 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - NACOS_ADDR=nacos:8848
+      - CONSUL_HOST=consul
+      - CONSUL_PORT=8500
     depends_on:
-      - nacos
+      consul:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   pudding-gateway:
     build:
@@ -31,10 +44,19 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - NACOS_ADDR=nacos:8848
+      - CONSUL_HOST=consul
+      - CONSUL_PORT=8500
     depends_on:
-      - nacos
+      consul:
+        condition: service_healthy
+      pudding-user:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 volumes:
-  nacos-data:
-  nacos-logs:
+  consul-data:
+  consul-config:
