--- a/pudding-gateway/src/main/resources/application.yml
+++ b/pudding-gateway/src/main/resources/application.yml
@@ -22,53 +22,7 @@ spring:
         enabled: true
         format: YAML
         data-key: data
-    gateway:
-      # 开启服务发现
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-      # 全局过滤器配置
-      default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
-      # HTTP客户端配置
-      httpclient:
-        pool:
-          max-idle-time: 55s
-          max-life-time: 10m
-        connect-timeout: 5000
-        response-timeout: 30s
-      # 全局CORS配置
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allowedOriginPatterns: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-              - PATCH
-            allowedHeaders: "*"
-            allowCredentials: true
-
-# Actuator 配置
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,gateway
-  endpoint:
-    health:
-      show-details: when_authorized
-
-# 日志配置
-logging:
-  level:
-    root: INFO
-    com.milkpudding.gateway: DEBUG
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.cloud.consul: DEBUG
-  pattern:
-    console: '%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level [%logger{50}] - %msg%n'
+        # 指定配置前缀，如果不指定，默认使用应用名
+        prefix: config
+        default-context: application
+        profile-separator: ','
