--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>milk-pudding</name>
-  <description>Multi-module project: pudding-user, pudding-gateway</description>
+  <description>Multi-module project: pudding-user, pudding-gateway, pudding-api</description>
 
   <modules>
     <module>pudding-user</module>
     <module>pudding-gateway</module>
+    <module>pudding-api</module>
   </modules>
 
   <properties>
@@ -57,33 +58,22 @@
         <version>3.13.0</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.2.5</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <jvmArguments>--enable-preview</jvmArguments>
-        </configuration>
       </plugin>
     </plugins>
   </build>
