--- a/pudding-api/src/main/resources/application.yml
+++ b/pudding-api/src/main/resources/application.yml
@@ -4,85 +4,25 @@ server:
 spring:
   application:
     name: pudding-api
-
-  # Jackson配置
-  jackson:
-    default-property-inclusion: non_null
-    serialization:
-      write-dates-as-timestamps: false
-    deserialization:
-      fail-on-unknown-properties: false
-
-# 外部API配置
-external:
-  api:
-    jsonplaceholder:
-      url: https://jsonplaceholder.typicode.com
-
-# Resilience4j配置
-resilience4j:
-  circuitbreaker:
-    instances:
-      jsonplaceholder:
-        registerHealthIndicator: true
-        slidingWindowSize: 10
-        minimumNumberOfCalls: 5
-        permittedNumberOfCallsInHalfOpenState: 3
-        automaticTransitionFromOpenToHalfOpenEnabled: true
-        waitDurationInOpenState: 5s
-        failureRateThreshold: 50
-        eventConsumerBufferSize: 10
-        recordExceptions:
-          - org.springframework.web.client.HttpServerErrorException
-          - java.util.concurrent.TimeoutException
-          - java.io.IOException
-        ignoreExceptions:
-          - org.springframework.web.client.HttpClientErrorException
-
-  retry:
-    instances:
-      jsonplaceholder:
-        maxAttempts: 3
-        waitDuration: 1s
-        enableExponentialBackoff: true
-        exponentialBackoffMultiplier: 2
-        retryExceptions:
-          - org.springframework.web.client.ResourceAccessException
-          - java.util.concurrent.TimeoutException
-        ignoreExceptions:
-          - org.springframework.web.client.HttpClientErrorException
-
-  ratelimiter:
-    instances:
-      jsonplaceholder:
-        registerHealthIndicator: true
-        limitForPeriod: 10
-        limitRefreshPeriod: 1s
-        timeoutDuration: 3s
-
-  timelimiter:
-    instances:
-      jsonplaceholder:
-        timeoutDuration: 2s
-        cancelRunningFuture: true
-
-# Actuator配置
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics,circuitbreakers,ratelimiters
-  endpoint:
-    health:
-      show-details: always
-  info:
-    env:
-      enabled: true
-
-# 日志配置
-logging:
-  level:
-    com.milkpudding.api: DEBUG
-    io.github.resilience4j: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  config:
+    import:
+      - "optional:consul:"
+  cloud:
+    consul:
+      host: ${CONSUL_HOST:localhost}
+      port: ${CONSUL_PORT:8500}
+      discovery:
+        service-name: ${spring.application.name}
+        health-check-path: /actuator/health
+        health-check-interval: 10s
+        instance-id: ${spring.application.name}:${server.port}
+        prefer-ip-address: true
+        tags: api,service
+      config:
+        enabled: true
+        format: YAML
+        data-key: data
+        # 指定配置前缀，如果不指定，默认使用应用名
+        prefix: config
+        default-context: application
+        profile-separator: ','
